<resources>
    <string name="app_name">Practica</string>
    <string name="BotonIrAInsertarUsuarios">Insertar Nuevos Usuarios</string>
    <string name="BotonListaUsuarios">Ir a Lista de Usuarios</string>
    <string name="textViewNacionalidad">Nacionalidad:</string>
    <string name="hintNacionalidad">ES, UK, DE</string>
    <string name="textViewSexo">Sexo:</string>
    <string name="hintSexo">female/male</string>
    <string name="textViewNumeroUsuarios">Numero de Usuarios a Insertar:</string>
    <string name="hintNumeroUsuarios">1</string>
    <string name="textViewFechaRegistro">Fecha de Registro:</string>
    <string name="hintFechaRegistro">dd/MM/YYYY</string>
    <string name="botonInsertar">Insertar</string>
    <string name="textViewNombre">Nombre</string>
    <string name="textViewFecha">Fecha</string>
    <string name="textViewGenero">Género</string>
    <string name="textViewImagen">Imagen</string>
    <string name="textViewLocalizacion">Localización</string>
    <string name="textviewusuarios">Usuario</string>
    <string name="textviewpass">Contrasena</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
