<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uc3m.practica.Insertar">

    <TextView
        android:id="@+id/textViewNacionalidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/textViewNacionalidad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNacionalidad"
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hintNacionalidad"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textViewNacionalidad"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/textViewSexo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNacionalidad" />

    <EditText
        android:id="@+id/editTextSexo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hintSexo"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textViewSexo"
        app:layout_constraintTop_toBottomOf="@+id/editTextNacionalidad" />

    <TextView
        android:id="@+id/textViewNumeroUsuarios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/textViewNumeroUsuarios"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSexo" />

    <EditText
        android:id="@+id/editTextNumero"
        android:layout_width="95dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hintNumeroUsuarios"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textViewNumeroUsuarios"
        app:layout_constraintTop_toBottomOf="@+id/editTextSexo" />

    <TextView
        android:id="@+id/textViewFechaRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/textViewFechaRegistro"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNumeroUsuarios" />

    <EditText
        android:id="@+id/editTextFechaRegistro"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hintFechaRegistro"
        android:inputType="date"
        app:layout_constraintStart_toEndOf="@+id/textViewFechaRegistro"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumero" />

    <Button
        android:id="@+id/botonInsertar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="botonInsertar"
        android:text="@string/botonInsertar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFechaRegistro" />

</android.support.constraint.ConstraintLayout>
