<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uc3m.practica.ListarHorizontal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/tabla"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/textnombre"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="@string/textViewNombre"
                        android:textAlignment="center"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textfecha"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="@string/textViewFecha"
                        android:textAlignment="center"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textgenero"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="@string/textViewGenero"
                        android:textAlignment="center"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textimagen"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/textViewImagen"
                        android:textAlignment="center"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textuser"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="@string/textviewusuarios"
                        android:textAlignment="center"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textpass"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="@string/textviewpass"
                        android:textAlignment="center"
                        android:textStyle="bold" />
                </TableRow>

            </TableLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
